fix: Fix bug in swagger
