# docs/swagger.json
@@ -59,6 +59,11 @@
         },
         "/food/list": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Return all the foods",
                 "produces": [
                     "application/json"
@@ -123,37 +128,6 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/food.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/food.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/food/reserve": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Reserve food for all users",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Food"
-                ],
-                "summary": "Reserve food",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/food.MessageResponse"
                         }
                     },
                     "500": {
@@ -267,15 +241,6 @@
                     "items": {
                         "$ref": "#/definitions/models.Food"
                     }
-                }
-            }
-        },
-        "food.MessageResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string",
-                    "example": "message"
                 }
             }
         },
